# vpnplane

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh
config/: settings.yaml
config/ai/: REQUIREMENTS.md
config/routes/: example-route.yaml
config/tunnels/: ipsec-example.yaml  wg-example.yaml
src/vpnplane/: __init__.py  connector.py  firewall.py  ipsec.py  models.py  utils.py  wireguard.py
src/vpnplane/cli/: __init__.py  apply.py  export.py  init.py  route.py  status.py  tunnel.py
